package com.example.csufttally;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;
import android.text.TextUtils;
import android.view.View;
import android.widget.EditText;
import android.widget.ListAdapter;
import android.widget.ListView;
import android.widget.TextView;
import android.widget.Toast;

import com.example.csufttally.adapter.AccountAdapter;
import com.example.csufttally.db.AccountBean;
import com.example.csufttally.db.DBManager;

import org.w3c.dom.Text;

import java.util.ArrayList;
import java.util.List;

public class SearchActivity extends AppCompatActivity {
    ListView searchlv;
    EditText searchEt;
    TextView emptyTv;
    List<AccountBean>mDatas;  //数据源
    AccountAdapter adapter; //适配器对象
    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_search);
        initView();
        mDatas=new ArrayList<>();
        adapter= new AccountAdapter(this,mDatas);
        searchlv.setAdapter(adapter);
        searchlv.setEmptyView(emptyTv);   //设置无数据时，显示的空间；
    }

    private void initView() {
        searchEt=findViewById(R.id.search_et);
        searchlv=findViewById(R.id.search_lv);
        emptyTv=findViewById(R.id.search_tv_empty);
    }

    public void onClick(View view) {
        switch (view.getId()) {
            case R.id.search_iv_back:
                finish();
                break;
            case R.id.search_iv_sh:  //搜索操作
                String msg = searchEt.getText().toString().trim();
                //判断输入内容是否为空，如果为空不能搜索
                if (TextUtils.isEmpty(msg)) {
                    Toast.makeText(this,"输入的内容不能为空",Toast.LENGTH_SHORT).show();
                    return;
                }
                //开始搜索
                List<AccountBean> list = DBManager.getAccountListByRemarkFromAccounttb(msg);
                mDatas.clear();
                mDatas.addAll(list);
                adapter.notifyDataSetChanged();
                break;
        }
    }
}
